overflow trying to fix

--- a/css/footer.css
+++ b/css/footer.css
@@ -11,8 +11,8 @@
 }
 
 .copyright-text {
-    margin-top: 20px;
-    margin-bottom: 5px;
+    /* margin-top: 20px;
+    margin-bottom: 5px; */
     font-size: 6vw;
 }
 
